Corrected css property of item-text--text-wrap

--- a/scss/_menu-pages.scss
+++ b/scss/_menu-pages.scss
@@ -174,7 +174,7 @@
                         width: 0;
 
                         &--text-wrap {
-                            text-wrap: wrap;
+                            overflow-wrap: normal;
                         }
 
                         &--ellipsis {
